fix z-index issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
 body {
     overflow-y: hidden;
+    z-index: 0;
 }
